[package]
name = "ratotoskr"
version = "0.0.0"
edition = "2021"
authors = ["rigma <rigbuntu@gmail.com>"]
repository = "https://github.com/rigma/ratotoskr/"
publish = false

[dependencies]
anyhow = "1.0.68"
cloudevents-sdk.workspace = true
tokio = { version = "1.23.0", features = [
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "tracing",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
